Don't manage the Music app with Yabai

--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -43,5 +43,6 @@ yabai -m rule --add app="^balenaEtcher$" manage=off
 yabai -m rule --add app="^Creative Cloud$" manage=off
 yabai -m rule --add app="^Logi Options$" manage=off
 yabai -m rule --add app="^Alfred Preferences$" manage=off
+yabai -m rule --add app="^Music$" manage=off
 
 echo "yabai configuration loaded.."
