--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,35 +1,20 @@
-# set the terminals
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set-option -g detach-on-destroy off
-
-# set default shell by OS
-if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/fish"
-if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
-
-# very large history
-set -g history-limit 1000000
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # base settings
 set -g clock-mode-style 12
 set -g focus-events on
+set -g history-limit 1000000 # very large history
 set -g history-limit 50000
 set -g status-keys vi
-set -gs escape-time 0 # TODO investigate `-s` flag
-
-# window settings
+set -gs escape-time 0 # TODO: investigate `-s` flag
 setw -g clock-mode-style 12
 setw -g mode-keys vi
-
-# enable clipboard (OSC 52)
 set -g set-clipboard on
-
-# start windows and pane numbering with index 1 instead of 0
-set -g base-index 1
+set -g base-index 1 
 setw -g pane-base-index 1
-
-# re-number windows when one is closed
 set -g renumber-windows on
 
 # remove confirm step when killing a window or pane
@@ -58,7 +43,7 @@ bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
 bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
 bind h select-pane -L
 bind j select-pane -D
-bind T display-popup -E "~/bin/tt"
+bind T display-popup -E "tt"
 bind k select-pane -U
 bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
@@ -85,36 +70,42 @@ set -g status-position top
 set -g pane-active-border-style "fg=white,bg=default"
 set -g pane-border-style "fg=brightblack,bg=default"
 
-set -g status-left-length 50
+set -g status-left-length 120
 set -g status-left "#[fg=blue,bold]#S " # session name
-set -ga status-left "#[fg=brightblack,nobold]("
 set -ga status-left "#[fg=white,bold]שׂ "
-set -ga status-left "#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf)"
-set -ga status-left "#[fg=brightblack,nobold,bg=default]) "
+set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
 
-set -g status-right-length 100
-set -g status-right "" # empty
+set -g status-right-length 300
+set -g status-right "#{now_playing}"
 
+# [0 - command]
 set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
 set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
 set -ga window-status-format "#[fg=white,bg=default]#W"
 set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
 
-# set -g window-status-current-format "#[fg=white,bold,bg=#1e1e2e] #I #F #W "
-set -g window-status-current-format "#[fg=white,nobold,bg=default]["
-set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#I #F "
-set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#W"
-set -ga window-status-current-format "#[fg=white,nobold,bg=default]]"
+# [0 * command]
+set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
+set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
+set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
+set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
+set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
+set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --no-preview --reverse'
+set -g @fzf-url-history-limit '2000'
+set -g @now-playing-scrollable-threshold 60
+set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist} #[fg=cyan]ﱘ #[fg=white]{title}"
 
 # Plugins
 set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'spywhere/tmux-now-playing'
 
 # Plugins Initialization (end of file)
 run '~/.tmux/plugins/tpm/tpm'
