feat: cleanup tmux config

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,21 +1,17 @@
-
 set-option -g detach-on-destroy off
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # base settings
+set -g base-index 1 
+setw -g pane-base-index 1
 set -g clock-mode-style 12
 set -g focus-events on
 set -g history-limit 1000000 # very large history
-set -g history-limit 50000
+set -g renumber-windows on
+set -g set-clipboard on
 set -g status-keys vi
 set -gs escape-time 0 # TODO: investigate `-s` flag
-setw -g clock-mode-style 12
-setw -g mode-keys vi
-set -g set-clipboard on
-set -g base-index 1 
-setw -g pane-base-index 1
-set -g renumber-windows on
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
@@ -49,8 +45,8 @@ bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
 
 # Set title
-set -g set-titles on
-set -g set-titles-string "#T"
+# set -g set-titles on
+# set -g set-titles-string "#T"
 
 # Mouse bindings
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
@@ -99,7 +95,7 @@ set -g @now-playing-scrollable-threshold 60
 set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist} #[fg=cyan]ﱘ #[fg=white]{title}"
 
 # Plugins
-set -g @plugin 'carlocab/tmux-nvr'
+# set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
