feat[starship]: add characters

--- a/mackup/.config/starship.toml
+++ b/mackup/.config/starship.toml
@@ -1,3 +1,8 @@
+[character]
+success_symbol = "[](black)"
+error_symbol = "[](red)"
+vicmd_symbol = "[](black)"
+
 [directory]
 style = "blue bold"
 
