--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -43,6 +43,7 @@ yabai -m rule --add app="^balenaEtcher$" manage=off
 yabai -m rule --add app="^Creative Cloud$" manage=off
 yabai -m rule --add app="^Logi Options$" manage=off
 yabai -m rule --add app="^Alfred Preferences$" manage=off
+yabai -m rule --add app="^Raycast Preferences$" manage=off
 yabai -m rule --add app="^Music$" manage=off
 
 echo "yabai configuration loaded.."
