feat: update gitmux

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -4,7 +4,7 @@ tmux:
     hashprefix: ':'
     ahead: ' '
     behind: ' '
-    staged: ' '
+    staged: '  '
     conflict: ' '
     untracked: ' '
     modified: ' '
@@ -20,6 +20,6 @@ tmux:
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=gray,nobold]'
     divergence: '#[fg=cyan,nobold]'
-  layout: [branch, divergence, ' ', flags]
+  layout: [branch, divergence, ' ', flags, ' ']
   options:
     branch_max_len: 0
