--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -3,7 +3,8 @@ set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 # base settings
-set -g base-index 1 
+# set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
+set -g base-index 1
 setw -g pane-base-index 1
 set -g clock-mode-style 12
 set -g focus-events on
@@ -12,6 +13,14 @@ set -g renumber-windows on
 set -g set-clipboard on
 set -g status-keys vi
 set -gs escape-time 0 # TODO: investigate `-s` flag
+
+# set-option -wg allow-rename on
+# set-option -wg automatic-rename on
+# set-option -wg automatic-rename-format "#W"
+
+# Set title
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
@@ -35,7 +44,7 @@ bind C-k resize-pane -U 5
 bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
-bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
+bind g new-window -c "#{pane_current_path}" -n "g" lazygit
 bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
 bind h select-pane -L
 bind j select-pane -D
@@ -44,14 +53,10 @@ bind k select-pane -U
 bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
 
-# Set title
-# set -g set-titles on
-# set -g set-titles-string "#T"
-
 # Mouse bindings
+set -g mouse on
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
 bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
-set -g mouse on
 
 # copy-mode-vi bindings
 bind-key -T copy-mode-vi 'C-h' select-pane -L
@@ -62,30 +67,38 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Theme
 set -g status-style 'bg=default,fg=white' # transparent status bar
-set -g status-position top 
+set -g status-position top
 set -g pane-active-border-style "fg=white,bg=default"
 set -g pane-border-style "fg=brightblack,bg=default"
 
-set -g status-left-length 70
+set -g status-left-length 60
 set -g status-left "#[fg=blue,bold]#S " # session name
 set -ga status-left "#[fg=white,bold]שׂ "
 set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
 
-set -g status-right-length 70
+set -g status-right-length 50
 set -g status-right "#{now_playing}"
 
 # [0 - command]
-set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
-set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
-set -ga window-status-format "#[fg=white,bg=default]#W"
-set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
+# set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
+# set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
+# set -ga window-status-format "#[fg=white,bg=default]#W"
+# set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
 
 # [0 * command]
-set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
-set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
-set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
-set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
-set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
+# set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
+# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
+# set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
+# set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
+# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
+
+# command
+set -g window-status-format "#[fg=brightblack,bg=default]#F"
+set -ga window-status-format "#[fg=white,bg=default]#W "
+
+# *command
+set -g window-status-current-format "#[fg=magenta,nobold,bg=default]#F"
+set -ga window-status-current-format "#[fg=white,bold,bg=default]#W "
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
