feat: make artists last in tmux status

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -105,7 +105,7 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --no-preview --reverse'
 set -g @fzf-url-history-limit '2000'
 set -g @now-playing-scrollable-threshold 60
-set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist} #[fg=cyan]ﱘ #[fg=white]{title}"
+set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist}"
 
 # Plugins
 # set -g @plugin 'carlocab/tmux-nvr'
