fix: cleanup file

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -109,6 +109,7 @@ set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,no
 
 # Plugins
 # set -g @plugin 'carlocab/tmux-nvr'
+# TODO: get working in lvim
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
