--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -31,6 +31,7 @@ yabai -m config layout                       bsp
 yabai -m config top_padding                  15
 yabai -m config bottom_padding               15
 yabai -m config left_padding                 15
+# NOTE: for OBS floating head 
 # yabai -m config left_padding                 450
 yabai -m config right_padding                15
 yabai -m config window_gap                   15
