feat: simplify tmux git stuff

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -44,8 +44,8 @@ bind C-k resize-pane -U 5
 bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
-bind g new-window -c "#{pane_current_path}" -n "g" lazygit
-bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
+bind g new-window -c "#{pane_current_path}" -n "" lazygit
+bind K new-window -c "#{pane_current_path}" -n "" lazydocker
 bind h select-pane -L
 bind j select-pane -D
 bind T display-popup -E "tt"
@@ -73,7 +73,7 @@ set -g pane-border-style "fg=brightblack,bg=default"
 
 set -g status-left-length 60
 set -g status-left "#[fg=blue,bold]#S " # session name
-set -ga status-left "#[fg=white,bold]שׂ "
+# set -ga status-left "#[fg=white,bold]שׂ "
 set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
 
 set -g status-right-length 50
