feat: add my t smart tmux session manager with tpm

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -114,6 +114,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'spywhere/tmux-now-playing'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
