feat: reorganize and cleanup tmux conf

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,11 +1,10 @@
-set-option -g detach-on-destroy off
-set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
+set-option -g detach-on-destroy off
+set-option -g set-titles on
+set-option -g set-titles-string "#T"
 
-# base settings
-# set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
 set -g base-index 1
-setw -g pane-base-index 1
 set -g clock-mode-style 12
 set -g focus-events on
 set -g history-limit 1000000 # very large history
@@ -14,13 +13,7 @@ set -g set-clipboard on
 set -g status-keys vi
 set -gs escape-time 0 # TODO: investigate `-s` flag
 
-# set-option -wg allow-rename on
-# set-option -wg automatic-rename on
-# set-option -wg automatic-rename-format "#W"
-
-# Set title
-set-option -g set-titles on
-set-option -g set-titles-string "#T"
+setw -g pane-base-index 1
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
@@ -36,24 +29,18 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# Keyboard shortcut bindings
-bind C-b last-window
-bind C-h resize-pane -L 5
-bind C-j resize-pane -D 5
-bind C-k resize-pane -U 5
-bind C-l resize-pane -R 5
-bind C-n next-window
-bind C-p previous-window
+# keyboard bindings
 bind g new-window -c "#{pane_current_path}" -n "" lazygit
 bind K new-window -c "#{pane_current_path}" -n "" lazydocker
-bind h select-pane -L
-bind j select-pane -D
-bind T display-popup -E "tt"
-bind k select-pane -U
-bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
 
-# Mouse bindings
+# vim bindings for pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# mouse
 set -g mouse on
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
 bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
@@ -65,56 +52,41 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# Theme
-set -g status-style 'bg=default,fg=white' # transparent status bar
+# status bar
 set -g status-position top
-set -g pane-active-border-style "fg=white,bg=default"
-set -g pane-border-style "fg=brightblack,bg=default"
-
-set -g status-left-length 60
+set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-left "#[fg=blue,bold]#S " # session name
-# set -ga status-left "#[fg=white,bold]שׂ "
 set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
-
-set -g status-right-length 50
+set -g status-left-length 60
 set -g status-right "#{now_playing}"
+set -g status-right-length 50
 
-# [0 - command]
-# set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
-# set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
-# set -ga window-status-format "#[fg=white,bg=default]#W"
-# set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
-
-# [0 * command]
-# set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
-# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
-# set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
-# set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
-# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
-
-# command
+# window
 set -g window-status-format "#[fg=brightblack,bg=default]#F"
 set -ga window-status-format "#[fg=white,bg=default]#W "
 
-# *command
 set -g window-status-current-format "#[fg=magenta,nobold,bg=default]#F"
 set -ga window-status-current-format "#[fg=white,bold,bg=default]#W "
 
-# Plugins configurations
+# pane
+set -g pane-border-style "fg=brightblack,bg=default"
+set -g pane-active-border-style "fg=white,bg=default"
+
+# plugins' configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --no-preview --reverse'
 set -g @fzf-url-history-limit '2000'
 set -g @now-playing-scrollable-threshold 60
 set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist}"
 
-# Plugins
-# set -g @plugin 'carlocab/tmux-nvr'
+# plugins
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
+set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'spywhere/tmux-now-playing'
-set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
