--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -23,6 +23,7 @@ key_bindings:
   - { key: E, mods: Command, chars: "\x02\"" }
   - { key: E, mods: Command|Shift, chars: "\x02%" }
   - { key: F, mods: Command, chars: "\x02\x5b\x2f" }
+  - { key: F, mods: Command|Shift, chars: "lfcd\n" }
   - { key: G, mods: Command, chars: "\x02g" }
   - { key: J, mods: Command, chars: "\x02\x54" }
   - { key: K, mods: Command, chars: "\x02s" }
