feat: add nvr-tmux support (with cmd+p)

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -32,7 +32,7 @@ bind c new-window -c "#{pane_current_path}"
 # keyboard bindings
 bind g new-window -c "#{pane_current_path}" -n "" lazygit
 bind K new-window -c "#{pane_current_path}" -n "" lazydocker
-bind v new-window -c "#{pane_current_path}" nvim +Files
+bind P run-shell "nvr-tmux --remote-send '<esc>:Telescope git_files<cr>'"
 
 # vim bindings for pane navigation
 bind h select-pane -L
@@ -65,8 +65,8 @@ set -g status-right-length 50
 set -g window-status-format "#[fg=brightblack,bg=default]#F"
 set -ga window-status-format "#[fg=white,bg=default]#W "
 
-set -g window-status-current-format "#[fg=magenta,nobold,bg=default]#F"
-set -ga window-status-current-format "#[fg=white,bold,bg=default]#W "
+set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]#F"
+set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#W "
 
 # pane
 set -g pane-border-style "fg=brightblack,bg=default"
