--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -40,7 +40,7 @@ key_bindings:
   - { key: LBracket, mods: Command, chars: "\x0f" }
   - { key: LBracket, mods: Command|Shift, chars: "\x02p" }
   - { key: O, mods: Command, chars: "\x02u" }
-  - { key: P, mods: Command, chars: ":Telescope git_files\n" }
+  - { key: P, mods: Command, chars: "\x02\x50" }
   - { key: P, mods: Command|Shift, chars: ":Telescope commands\n" }
   - { key: Period, mods: Command, chars: ":ZenMode\n" }
   - { key: Q, mods: Command, chars: ":q\n" }
