feat: create base nvim config

--- a/mackup/.mackup/neovim.cfg
+++ b/mackup/.mackup/neovim.cfg
@@ -2,6 +2,13 @@
 name = neovim
 
 [xdg_configuration_files]
-nvim/nvim-config
-nvim/init.vim
-nvim/coc-settings.json
+nvim/init.lua
+nvim/lua
+nvim/colors
+nvim/compiler
+nvim/ftplugin
+nvim/ftdetect
+nvim/indent
+nvim/plugin
+nvim/syntax
+nvim/after
