--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,19 +1,19 @@
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -g default-terminal "screen-256color"
-set-option -g detach-on-destroy off
-set-option -g set-titles on
-set-option -g set-titles-string "#T"
+set-option -g status-interval 1
+set-option -g automatic-rename on
+# TODO: make into tpm plugin
+set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})"
 
+set -g detach-on-destroy off
 set -g base-index 1
-set -g clock-mode-style 12
 set -g focus-events on
-set -g history-limit 1000000 # very large history
+set -g history-limit 1000000
+set -g pane-base-index 1
 set -g renumber-windows on
 set -g set-clipboard on
 set -g status-keys vi
-set -gs escape-time 0 # TODO: investigate `-s` flag
-
-setw -g pane-base-index 1
+set -s escape-time 0
 
 # remove confirm step when killing a window or pane
 bind-key & kill-window
@@ -22,7 +22,6 @@ bind-key x kill-pane
 # begin selection with `v` (vi-like)
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
-# Window related bindings
 # Open a new pane or window with the current directory of the current pane,
 # not the directory in which the first tmux session was started.
 bind '"' split-window -c "#{pane_current_path}"
@@ -30,20 +29,20 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # keyboard bindings
-bind g new-window -c "#{pane_current_path}" -n "" lazygit
+bind g new-window -c "#{pane_current_path}" -n "" lazygit
 bind K new-window -c "#{pane_current_path}" -n "" lazydocker
 bind P run-shell "nvr-tmux --remote-send '<esc>:Telescope git_files<cr>'"
+
+# mouse
+set -g mouse on
+bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
+bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
 
 # vim bindings for pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-# mouse
-set -g mouse on
-bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
-bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
 
 # copy-mode-vi bindings
 bind-key -T copy-mode-vi 'C-h' select-pane -L
@@ -52,7 +51,7 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
-# status bar
+# status bar style
 set -g status-position top
 set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-left "#[fg=blue,bold]#S " # session name
@@ -61,20 +60,20 @@ set -g status-left-length 60
 set -g status-right "#{now_playing}"
 set -g status-right-length 50
 
-# window
+# window style
 set -g window-status-format "#[fg=brightblack,bg=default]#F"
 set -ga window-status-format "#[fg=white,bg=default]#W "
 
 set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]#F"
 set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#W "
 
-# pane
+# pane style
 set -g pane-border-style "fg=brightblack,bg=default"
 set -g pane-active-border-style "fg=white,bg=default"
 
 # plugins' configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
-set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --no-preview --reverse'
+set -g @fzf-url-fzf-options '-w 50% -h 50% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 set -g @now-playing-scrollable-threshold 60
 set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist}"
