--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -3,6 +3,9 @@ live_config_reload: true
 env:
   TERM: xterm-256color
 
+shell:
+  program: /opt/homebrew/bin/fish
+
 font:
   normal:
     family: 'SFMono Nerd Font'
