use fish default tmux

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -3,6 +3,7 @@ set-option -g default-terminal "screen-256color"
 set-option -g detach-on-destroy off
 set-option -g set-titles on
 set-option -g set-titles-string "#T"
+set-option -g default-shell /opt/homebrew/bin/fish
 
 set -g base-index 1
 set -g clock-mode-style 12
