--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -83,11 +83,13 @@ set -g @plugin 'akohlbecker/aw-watcher-tmux'
 set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
-set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'spywhere/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-fzf-url'
+
+# TODO: enable and learn
+# set -g @plugin 'Morantron/tmux-fingers'
 
 # Plugins Initialization (end of file)
 run '~/.tmux/plugins/tpm/tpm'
