--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -1,14 +1,14 @@
 tmux:
   symbols:
-    branch: ''
+    branch: 'שׂ '
     hashprefix: ':'
-    ahead: ' '
-    behind: ' '
-    staged: '  '
-    conflict: ' '
-    untracked: ' '
-    modified: ' '
-    stashed: 'ﮅ '
+    ahead: ' '
+    behind: ' '
+    staged: '都'
+    conflict: '繁 '
+    untracked: ' '
+    modified: ' '
+    stashed: ' '
     clean: ''
   styles:
     state: '#[fg=red,nobold]'
@@ -16,7 +16,7 @@ tmux:
     staged: '#[fg=green,nobold]'
     conflict: '#[fg=red,nobold]'
     modified: '#[fg=yellow,nobold]'
-    untracked: '#[fg=green,nobold]'
+    untracked: '#[fg=black,nobold]'
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=gray,nobold]'
     divergence: '#[fg=cyan,nobold]'
