feat[tmux]: remove symobol on window status

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -61,11 +61,8 @@ set -g status-right "#{now_playing}"
 set -g status-right-length 50
 
 # window style
-set -g window-status-format "#[fg=brightblack,bg=default]#F"
-set -ga window-status-format "#[fg=white,bg=default]#W "
-
-set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]#F"
-set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#W "
+set -g window-status-format "#[fg=white,bg=default]#W "
+set -g window-status-current-format "#[fg=magenta,bold,bg=default]#W "
 
 # pane style
 set -g pane-border-style "fg=brightblack,bg=default"
