feat[nvim]: add clean icon

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -9,7 +9,7 @@ tmux:
     untracked: ' '
     modified: ' '
     stashed: ' '
-    clean: ''
+    clean: ''
   styles:
     state: '#[fg=red,nobold]'
     branch: '#[fg=white,nobold]'
@@ -18,7 +18,7 @@ tmux:
     modified: '#[fg=yellow,nobold]'
     untracked: '#[fg=black,nobold]'
     stashed: '#[fg=gray,nobold]'
-    clean: '#[fg=gray,nobold]'
+    clean: '#[fg=brightblack,nobold]'
     divergence: '#[fg=cyan,nobold]'
   layout: [branch, divergence, ' ', flags, ' ']
   options:
