fix[alacritty]: switch back to telescope command

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -31,7 +31,7 @@ bind c new-window -c "#{pane_current_path}"
 # keyboard bindings
 bind g new-window -c "#{pane_current_path}" -n "" lazygit
 bind K new-window -c "#{pane_current_path}" -n "" lazydocker
-bind P run-shell "nvr-tmux --remote-send '<esc>:Telescope git_files<cr>'"
+bind P run-shell "nvim"
 
 # mouse
 set -g mouse on
