feat[tmux]: organize and cleanup

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,25 +1,50 @@
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-set-option -g default-terminal "screen-256color"
-set-option -g status-interval 1
-set-option -g automatic-rename on
-# TODO: make into tpm plugin
-set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})"
+#  _________  _____ ______   ___  ___     ___    ___ 
+# |\___   ___\\   _ \  _   \|\  \|\  \   |\  \  /  /|
+# \|___ \  \_\ \  \\\__\ \  \ \  \\\  \  \ \  \/  / /
+#      \ \  \ \ \  \\|__| \  \ \  \\\  \  \ \    / / 
+#       \ \  \ \ \  \    \ \  \ \  \\\  \  /     \/  
+#        \ \__\ \ \__\    \ \__\ \_______\/  /\   \  
+#         \|__|  \|__|     \|__|\|_______/__/ /\ __\ 
+#                                        |__|/ \|__| 
+# 'wfxr/tmux-fzf-url'
+# cSpell:words nobold brightblack carlocab akohlbecker christoomey nhdaly spywhere wfxr
 
-set -g detach-on-destroy off
-set -g base-index 1
-set -g focus-events on
-set -g history-limit 1000000
-set -g pane-base-index 1
+# custom keybindings
+bind g new-window -c "#{pane_current_path}" -n "" lazygit
+
+# reactivity
+bind-key & kill-window # remove confirm step
+bind-key x kill-pane # remove confirm step
+set -g detach-on-destroy off # don't exit from tmux when closing a session 
+set -g escape-time 0 # remove escape time delay
 set -g renumber-windows on
+set-option -g status-interval 1 # decrease interval timing
+
+# indexes
+set -g base-index 1
+set -g pane-base-index 1
+
+# colors
+set-option -sa terminal-overrides ",xterm-256color:RGB"
+set-option -g default-terminal "screen-256color"
+
+# history
+set -g history-limit 1000000 # increased
+
+# clipboard
 set -g set-clipboard on
+
+# vi-mode
 set -g status-keys vi
-set -s escape-time 0
-
-# remove confirm step when killing a window or pane
-bind-key & kill-window
-bind-key x kill-pane
-
-# begin selection with `v` (vi-like)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 # Open a new pane or window with the current directory of the current pane,
@@ -28,28 +53,10 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# keyboard bindings
-bind g new-window -c "#{pane_current_path}" -n "" lazygit
-bind K new-window -c "#{pane_current_path}" -n "" lazydocker
-bind P run-shell "nvim"
-
 # mouse
 set -g mouse on
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
 bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
-
-# vim bindings for pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# copy-mode-vi bindings
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # status bar style
 set -g status-position top
@@ -66,7 +73,10 @@ set -g window-status-current-format "#[fg=magenta,bold,bg=default]#W "
 
 # pane style
 set -g pane-border-style "fg=brightblack,bg=default"
-set -g pane-active-border-style "fg=white,bg=default"
+set -g pane-active-border-style "fg=magenta,bg=default"
+
+# TODO: make into tpm plugin
+set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})"
 
 # plugins' configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
@@ -85,8 +95,4 @@ set -g @plugin 'spywhere/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'wfxr/tmux-fzf-url'
 
-# TODO: enable and learn
-# set -g @plugin 'Morantron/tmux-fingers'
-
-# Plugins Initialization (end of file)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm' # always at end of file
