--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -17,44 +17,45 @@ window:
   dynamic_padding: false
   decorations: buttonless
 
+# NOTE: helpful hex codes
 # \x1b = escape (useful for vim-related keybindings)
 # \x02 = control-b (the default tmux prefix)
 
 key_bindings:
-  - { key: Comma, mods: Command, chars: "\x02," }
-  - { key: E, mods: Command, chars: "\x02\"" }
-  - { key: E, mods: Command|Shift, chars: "\x02%" }
-  - { key: F, mods: Command|Shift, chars: "\x02\x5b\x2f" }
-  - { key: F, mods: Command, chars: "lfcd\n" }
-  - { key: G, mods: Command, chars: "\x02g" }
-  - { key: J, mods: Command, chars: "\x02\x54" }
-  - { key: K, mods: Command, chars: "\x02s" }
-  - { key: Key1, mods: Command, chars: "\x021" }
-  - { key: Key2, mods: Command, chars: "\x022" }
-  - { key: Key3, mods: Command, chars: "\x023" }
-  - { key: Key4, mods: Command, chars: "\x024" }
-  - { key: Key5, mods: Command, chars: "\x025" }
-  - { key: Key6, mods: Command, chars: "\x026" }
-  - { key: Key7, mods: Command, chars: "\x027" }
-  - { key: Key8, mods: Command, chars: "\x028" }
-  - { key: Key9, mods: Command, chars: "\x029" }
-  - { key: L, mods: Command, chars: "\x02L" }
-  - { key: LBracket, mods: Command, chars: "\x0f" }
-  - { key: LBracket, mods: Command|Shift, chars: "\x02p" }
+  - { key: Key1, mods: Command, chars: "\x021" } # select tmux window 1
+  - { key: Key2, mods: Command, chars: "\x022" } #                ... 2
+  - { key: Key3, mods: Command, chars: "\x023" } #                ... 3
+  - { key: Key4, mods: Command, chars: "\x024" } #                ... 4
+  - { key: Key5, mods: Command, chars: "\x025" } #                ... 5
+  - { key: Key6, mods: Command, chars: "\x026" } #                ... 6
+  - { key: Key7, mods: Command, chars: "\x027" } #                ... 7
+  - { key: Key8, mods: Command, chars: "\x028" } #                ... 8
+  - { key: Key9, mods: Command, chars: "\x029" } #                ... 9
+  - { key: Comma, mods: Command, chars: "\x02," } # rename the current tmux window
+  - { key: E, mods: Command, chars: "\x02\"" } # split tmux window vertically
+  - { key: E, mods: Command|Shift, chars: "\x02%" } # split tmux window horizontally
+  - { key: F, mods: Command|Shift, chars: "\x02\x5b\x2f" } # start tmux search mode
+  - { key: F, mods: Command, chars: "lfcd\n" } # open file manager 'gokcehan/lf'
+  - { key: G, mods: Command, chars: "\x02g" } # open git manager 'jesseduffield/lazygit' 
+  - { key: J, mods: Command, chars: "\x02\x54" } # open t - tmux smart session manager
+  - { key: K, mods: Command, chars: "\x02s" } # open interactive tmux session client
+  - { key: L, mods: Command, chars: "\x02L" } # switch to the last tmux session
+  - { key: LBracket, mods: Command, chars: "\x0f" } # navigate back (ctrl+o)
+  - { key: LBracket, mods: Command|Shift, chars: "\x02p" } # switch to next tmux window
   - { key: O, mods: Command, chars: "\x02u" }
-  - { key: P, mods: Command, chars: ":Telescope git_files\n" }
-  - { key: P, mods: Command|Shift, chars: ":Telescope commands\n" }
-  - { key: Period, mods: Command, chars: ":ZenMode\n" }
-  - { key: Q, mods: Command, chars: ":q\n" }
+  - { key: P, mods: Command, chars: "\x1b:Telescope git_files\n" } # files
+  - { key: P, mods: Command|Shift, chars: "\x1b:Telescope commands\n" } # commands
+  # - { key: Period, mods: Command, chars: "\x1b\x20\x2e\x0a" } (causes popup to be unfocused)
+  - { key: Q, mods: Command, chars: ":q\n" } # quit vim
   - { key: R, mods: Command, chars: "\x1b\x5b\x41\x0a" }
   - { key: RBracket, mods: Command, chars: "\x09" }
   - { key: RBracket, mods: Command|Shift, chars: "\x02n" }
-  - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" }
-  - { key: S, mods: Command|Shift, chars: ":wa\n" }
-  - { key: Semicolon, mods: Command, chars: "\x02:" }
-  - { key: T, mods: Command, chars: "\x02c" }
-  - { key: W, mods: Command, chars: "\x02x" }
-  - { key: Z, mods: Command, chars: "\x02z" }
+  - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" } # save vim buffer
+  - { key: S, mods: Command|Shift, chars: ":wa\n" } # save all
+  - { key: Semicolon, mods: Command, chars: "\x02:" } # enter the tmux command prompt
+  - { key: T, mods: Command, chars: "\x02c" } # create a new tmux window
+  - { key: W, mods: Command, chars: "\x02x" } # kill the current pane
+  - { key: Z, mods: Command, chars: "\x02z" } # toggle zoom state of the current tmux pane
 
 import:
   - ~/.config/alacritty/aw/current.yml
