--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -16,7 +16,7 @@ tmux:
     staged: '#[fg=green,nobold]'
     conflict: '#[fg=red,nobold]'
     modified: '#[fg=yellow,nobold]'
-    untracked: '#[fg=black,nobold]'
+    untracked: '#[fg=gray,nobold]'
     stashed: '#[fg=gray,nobold]'
     clean: '#[fg=brightblack,nobold]'
     divergence: '#[fg=cyan,nobold]'
