--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,28 +1,44 @@
-#  _________  _____ ______   ___  ___     ___    ___ 
-# |\___   ___\\   _ \  _   \|\  \|\  \   |\  \  /  /|
-# \|___ \  \_\ \  \\\__\ \  \ \  \\\  \  \ \  \/  / /
-#      \ \  \ \ \  \\|__| \  \ \  \\\  \  \ \    / / 
-#       \ \  \ \ \  \    \ \  \ \  \\\  \  /     \/  
-#        \ \__\ \ \__\    \ \__\ \_______\/  /\   \  
-#         \|__|  \|__|     \|__|\|_______/__/ /\ __\ 
-#                                        |__|/ \|__| 
-# 'wfxr/tmux-fzf-url'
+#
+#               _________  _____ ______   ___  ___    ___    ___ 
+#              |\___   ___\\   _ \  _   \|\  \|\  \  |\  \  /  /|
+#              \|___ \  \_\ \  \\\__\ \  \ \  \\\  \ \ \  \/  / /
+#                   \ \  \ \ \  \\|__| \  \ \  \\\  \ \ \    / / 
+#                    \ \  \ \ \  \    \ \  \ \  \\\  \ \/    \/  
+#   'tmux/tmux'       \ \__\ \ \__\    \ \__\ \_______\/  /\  \  
+#                      \|__|  \|__|     \|__|\|_______/__/ /\__\ 
+#                                                     |__|/ \__| 
+#
 # cSpell:words nobold brightblack carlocab akohlbecker christoomey nhdaly spywhere wfxr
+
+bind-key x kill-pane            # skip "kill-pane 1? (y/n)" prompt (cmd+w)
+set -g base-index 1             # start indexing windows at 1 instead of 0
+set -g pane-base-index 1        # start indexing panes at 1 instead of 0
+set -g renumber-windows on      # renumber all windows when any window is closed
+set -g detach-on-destroy off    # don't exit from tmux when closing a session 
+set -g escape-time 0            # zero-out escape time delay
+set-option -g status-interval 1 # decrease interval timing
+
+set -g status-position top # position to the top of the screen (darwin style)
+set -g status-style 'bg=default,fg=white' # transparent bg with neutral text
+
+set -g  status-left "#[fg=blue,bold]#S " # session name
+set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
+
+set -g status-right "#{now_playing}"
+
+set -g  status-left-length 60
+set -g status-right-length 50
+
+# window styles
+set -g window-status-format "#[fg=white,bg=default]#W "
+set -g window-status-current-format "#[fg=magenta,bold,bg=default]#W "
+
+# pane styles
+set -g pane-border-style "fg=brightblack,bg=default"
+set -g pane-active-border-style "fg=magenta,bg=default"
 
 # custom keybindings
 bind g new-window -c "#{pane_current_path}" -n "" lazygit
-
-# reactivity
-bind-key & kill-window # remove confirm step
-bind-key x kill-pane # remove confirm step
-set -g detach-on-destroy off # don't exit from tmux when closing a session 
-set -g escape-time 0 # remove escape time delay
-set -g renumber-windows on
-set-option -g status-interval 1 # decrease interval timing
-
-# indexes
-set -g base-index 1
-set -g pane-base-index 1
 
 # colors
 set-option -sa terminal-overrides ",xterm-256color:RGB"
@@ -45,35 +61,19 @@ bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
 
 # Open a new pane or window with the current directory of the current pane,
 # not the directory in which the first tmux session was started.
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+
+bind '"' split-window -c  "#{pane_current_path}"
+bind %   split-window -ch "#{pane_current_path}"
+bind c   new-window   -c  "#{pane_current_path}"
 
 # mouse
 set -g mouse on
 bind-key -n MouseUp2Status kill-window -t= # Middle click on the window label to kill it
 bind-key -n DoubleClick1Status new-window # Double click on the window list to open a new window
-
-# status bar style
-set -g status-position top
-set -g status-style 'bg=default,fg=white' # transparent status bar
-set -g status-left "#[fg=blue,bold]#S " # session name
-set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
-set -g status-left-length 60
-set -g status-right "#{now_playing}"
-set -g status-right-length 50
-
-# window style
-set -g window-status-format "#[fg=white,bg=default]#W "
-set -g window-status-current-format "#[fg=magenta,bold,bg=default]#W "
-
-# pane style
-set -g pane-border-style "fg=brightblack,bg=default"
-set -g pane-active-border-style "fg=magenta,bg=default"
 
 # TODO: make into tpm plugin
 set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})"
@@ -87,12 +87,14 @@ set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,no
 
 # plugins
 set -g @plugin 'akohlbecker/aw-watcher-tmux'
-set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'spywhere/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'wfxr/tmux-fzf-url'
+
+# TODO: decide if I want to use this
+# set -g @plugin 'carlocab/tmux-nvr'
 
 run '~/.tmux/plugins/tpm/tpm' # always at end of file
