feat[tmux]: organize

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -18,15 +18,14 @@ set -g detach-on-destroy off    # don't exit from tmux when closing a session
 set -g escape-time 0            # zero-out escape time delay
 set-option -g status-interval 1 # decrease interval timing
 
-set -g status-position top # position to the top of the screen (darwin style)
+set -g status-position top                # macOS / darwin style
 set -g status-style 'bg=default,fg=white' # transparent bg with neutral text
 
 set -g  status-left "#[fg=blue,bold]#S " # session name
 set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
+set -g  status-left-length 60
 
 set -g status-right "#{now_playing}"
-
-set -g  status-left-length 60
 set -g status-right-length 50
 
 # window styles
@@ -65,7 +64,6 @@ bind-key -T copy-mode-vi 'v'   send-keys -X begin-selection
 
 # Open a new pane or window with the current directory of the current pane,
 # not the directory in which the first tmux session was started.
-
 bind '"' split-window -c  "#{pane_current_path}"
 bind %   split-window -ch "#{pane_current_path}"
 bind c   new-window   -c  "#{pane_current_path}"
@@ -82,7 +80,7 @@ set-option -g automatic-rename-format "#(tmux-icon-name #{pane_current_command})
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 set -g @fzf-url-fzf-options '-w 50% -h 50% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
-set -g @now-playing-scrollable-threshold 60
+set -g @now-playing-scrollable-threshold 80
 set -g @now-playing-status-format "#[fg=cyan]ﱘ #[fg=white]{title} #[fg=cyan,nobold]#[fg=blue] #[fg=white]{artist}"
 
 # plugins
