feat: remove now playing in favor of Sleeve app

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -25,8 +25,9 @@ set -g  status-left "#[fg=blue,bold]#S " # session name
 set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf) "
 set -g  status-left-length 60
 
-set -g status-right "#{now_playing}"
-set -g status-right-length 50
+set -g status-right ""
+# set -g status-right "#{now_playing}"
+# set -g status-right-length 50
 
 # window styles
 set -g window-status-format "#[fg=white,bg=default]#W "
